# flagnum

./: Cargo.toml  LICENSE  README.md
flagnum/: Cargo.toml
flagnum-core/: Cargo.toml
flagnum-core/src/: lib.rs
flagnum-proc-macro/: Cargo.toml
flagnum-proc-macro/src/: builder.rs  lib.rs  parser.rs
flagnum/src/: example.rs  feature_serde.rs  lib.rs
flagnum/src/example/: weekdays.rs
flagnum/tests/: basics.rs  feature_serde.rs  std_traits.rs
