[package]
name = "flagnum"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
flagnum-proc-macro = { path = "../flagnum-proc-macro" }
serde = { version = "1.0.147", features = ["derive"], optional = true }

[dev-dependencies]
serde_json = "1.0.87"

[features]
serde = ["dep:serde", "flagnum-proc-macro/serde"]
